welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:31: error: type mismatch;
 found   : Unit
 required: Boolean
	gauche();
              ^